# AoC2022

./: .gitignore
day1/: CMakeLists.txt  main.cc
day10/: main.cc
day10/.cache/clangd/index/: main.cc.A7661A2668D2BB5B.idx
day11/: inp_1.txt  inp_t1.txt  main.cc
day12/: main.cc  main1.cc
day13/: CMakeLists.txt  day13.py  main.cc
day14/: inp_1.txt  main.cc  main_part2.cc
day15/: inp_1.txt  main.cc
day16/: main.cc
day17/: .clang-format  CMakeLists.txt  main.cc  main_part1.cc
day2/: day2.py
day20/: main.cc
day3/: day3.py  day3_2.py
day4/: day4.jl
day5/: CMakeLists.txt  main.cc
day5/.cache/clangd/index/: main.cc.24ADA0C9367E7682.idx
day6/: main.cc
day6/.cache/clangd/index/: main.cc.08C912972709C5DB.idx
day6/src/: main.rs
day7/: day7.jl
day8/: day8.jl  day8_2.jl  day8_2t.jl
day9/: day9.jl
